--- a/Docker-Lab/Vagrantfile
+++ b/Docker-Lab/Vagrantfile
@@ -86,6 +86,7 @@ Vagrant.configure("2") do |config|
     devops.vm.provision "shell", path: "scripts/visualcode.sh"
     devops.vm.provision "shell", path: "scripts/githubdesktop.sh"
     devops.vm.provision "shell", path: "scripts/tweaks.sh"
+    devops.vm.provision "shell", path: "scripts/docker.sh"
     devops.vm.provision "shell", inline: "echo 'Rebooting...'", reboot: true
   end
 end
