--- a/Jenkis-Lab/Vagrantfile
+++ b/Jenkis-Lab/Vagrantfile
@@ -86,7 +86,9 @@ Vagrant.configure("2") do |config|
     devops.vm.provision "shell", path: "scripts/visualcode.sh"
     devops.vm.provision "shell", path: "scripts/githubdesktop.sh"
     devops.vm.provision "shell", path: "scripts/tweaks.sh"
+    devops.vm.provision "shell", path: "scripts/docker.sh"
     devops.vm.provision "shell", inline: "echo 'Rebooting...'", reboot: true
+    devops.vm.provision "shell", path: "scripts/jenkins.sh", privileged: false #, run: "always"
   end
 end
 
