--- a/Kubernetes-Lab/Vagrantfile
+++ b/Kubernetes-Lab/Vagrantfile
@@ -86,7 +86,12 @@ Vagrant.configure("2") do |config|
     devops.vm.provision "shell", path: "scripts/visualcode.sh"
     devops.vm.provision "shell", path: "scripts/githubdesktop.sh"
     devops.vm.provision "shell", path: "scripts/tweaks.sh"
+    devops.vm.provision "shell", path: "scripts/docker.sh"
     devops.vm.provision "shell", inline: "echo 'Rebooting...'", reboot: true
+    devops.vm.provision "shell", path: "scripts/kubernetes.sh", privileged: false #, run: "always"
+    devops.vm.provision "shell", path: "scripts/prometheus-operator.sh", privileged: false 
+    #--devops.vm.provision "shell", path: "scripts/grafana.sh", privileged: false
+    devops.vm.provision "shell", path: "scripts/openlens.sh", privileged: false
   end
 end
 
