--- a/Terraform-Lab/Vagrantfile
+++ b/Terraform-Lab/Vagrantfile
@@ -86,6 +86,8 @@ Vagrant.configure("2") do |config|
     devops.vm.provision "shell", path: "scripts/visualcode.sh"
     devops.vm.provision "shell", path: "scripts/githubdesktop.sh"
     devops.vm.provision "shell", path: "scripts/tweaks.sh"
+    devops.vm.provision "shell", path: "scripts/terraform.sh"
+    devops.vm.provision "shell", path: "scripts/aws-cli.sh"
     devops.vm.provision "shell", inline: "echo 'Rebooting...'", reboot: true
   end
 end
